<resources>
    <string name="app_name">Grabble</string>
    <string name="title_activity_maps">Map</string>

    <string name="map_recenter">Recenter</string>
    <string name="show_collection">Collection and Stats</string>
    <string name="title_activity_user_personal_pages">Collection</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String related to Maps Activity -->
    <string name="location_permission_denied">The game requires location permission to work!</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_back_message">Pick an option</string>
    <string name="log_out">Log Out</string>
    <string name="close_app">Exit Grabble</string>

    <!-- All alphabet letters-->
    <string name="letter_A">A</string>
    <string name="letter_B">B</string>
    <string name="letter_C">C</string>
    <string name="letter_D">D</string>
    <string name="letter_E">E</string>

    <string name="letter_F">F</string>
    <string name="letter_G">G</string>
    <string name="letter_H">H</string>
    <string name="letter_I">I</string>
    <string name="letter_J">J</string>

    <string name="letter_K">K</string>
    <string name="letter_L">L</string>
    <string name="letter_M">M</string>
    <string name="letter_N">N</string>
    <string name="letter_O">O</string>

    <string name="letter_P">P</string>
    <string name="letter_Q">Q</string>
    <string name="letter_R">R</string>
    <string name="letter_S">S</string>
    <string name="letter_T">T</string>

    <string name="letter_U">U</string>
    <string name="letter_V">V</string>
    <string name="letter_W">W</string>
    <string name="letter_X">X</string>
    <string name="letter_Y">Y</string>
    <string name="letter_Z">Z</string>

    <!-- Strings for Register Activity-->
    <string name="title_activity_register">Register</string>
    <string name="register_and_login">Register &amp; Login</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="error_nickname_taken">This nickname is already taken</string>
    <string name="error_email_taken">This email is already registered</string>


    <!-- Strings for User Personal pages-->
    <string name="hint_enter_word">Enter a word</string>\
    <string name="personal_page_2_words">Words Scrabbled</string>
    <string name="personal_page_2_stats">Statistics</string>
    <string name="personal_page_2_score">Total Score:</string>
    <string name="personal_page_2_wordCount">Words Collected:</string>
    <string name="personal_page_2_lettersTotal">Total letters collected:</string>
    <string name="personal_page_2_lettersNow">Letters available to use:</string>
    <string name="personal_page_2_distanceWalked">Distance Walked:</string>
    <string name="personal_page_all_swipe_hint">&lt;- Swipe Left/Right -&gt;</string>
    <string name="title_activity_settings">Settings</string>
    <string name="personal_page_3_description">
        \n\n
        <b>Walk Distance: </b> you will have to walk a certain amount of distance in KM 0 &lt; n &lt; 10
        \n\n
    </string>


    <!-- Strings for Floating Action Button in User Personal pages -->
    <string name="fab_action">Send Email</string>
    <string name="fab_contact">Contact Developer</string>
    <string name="fab_email_dev">Email Developer</string>
    <string name="fab_invite">Invite a Friend</string>

    <!-- Strings for sending email -->
    <string name="send_email_subject">Grabble App</string>
    <string name="send_email_body_dev">Hello s1345382!</string>
    <string name="send_email_body_friend">Hello Friend! Check out GRABBLE app!</string>
    <string name="send_email_error">No email clients installed.</string>

    <!-- Strings for Goals -->
    <string name="goal_set">The Goal is already set!</string>


    <!-- Strings related to Settings -->

    <!-- Game Mode Settings -->
    <string name="pref_header_game_mode">Game Mode</string>

    <string name="pref_title_battery_saver">Battery Saver</string>
    <string name="pref_description_battery_saver">
        Same battery power (may cause less accurate location accuracy)
    </string>

    <string name="pref_title_difficulty">Difficulty</string>
    <string-array name="pref_difficulty_list_titles">
        <item>EASY</item>
        <item>MEDIUM</item>
        <item>HARD</item>
    </string-array>
    <string-array name="pref_difficulty_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for map style -->
    <string name="pref_header_map_style">Map</string>
    <string name="map_style">Map Style</string>
    <string-array name="pref_map_style_titles">
        <item name="pref_map_style_standard">Standard</item>
        <item name="pref_map_style_night">Night</item>
        <item name="pref_map_style_silver">Silver</item>
        <item name="pref_map_style_dark">Dark</item>
        <item name="pref_map_style_aubergine">Aubergine</item>
        <item name="pref_map_style_retro">Retro</item>
    </string-array>
    <string-array name="pref_map_style_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


</resources>
