<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.verden11.grabble.UserPersonalPages">


    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter a word" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_word"
            android:inputType="text"
            android:maxLength="7"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/b_letterQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_Q"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_W"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_E"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_R"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_T"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_Y"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterU"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_U"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_I"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_O"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_P"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <Button
            android:id="@+id/b_letterA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_A"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_S"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_D"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_F"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_G"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_H"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterJ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_J"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_K"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_L"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <Button
            android:id="@+id/b_letterZ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_Z"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_X"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_C"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_V"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_B"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_N"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/b_letterM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="charButtonPress"
            android:padding="0dp"
            android:text="@string/letter_M"
            android:textAllCaps="false" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/b_submit_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Submit" />

        <Button
            android:id="@+id/b_backspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="\u232b" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:text="@string/personal_page_all_swipe_hint"
        android:textAlignment="center" />


</LinearLayout>
