<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="battery_saving_mode_switch"
        android:summary="@string/pref_description_battery_saver"
        android:title="@string/pref_title_battery_saver" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_difficulty_list_titles"
        android:entryValues="@array/pref_difficulty_list_values"
        android:key="difficulty_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_difficulty" />

</PreferenceScreen>
